IPC::StreamServerConnection is leaking IPC::Connection object for RemoteGraphicsContextGL https://bugs.webkit.org/show_bug.cgi?id=256200

Reviewed by NOBODY (OOPS!).

IPC::Connection::open takes an optional dispatcher of type
SerialFunctionDispatcher. It uses RunLoop::current() by default if not
specified. IPC::StreamServerConnection opened a IPC::Connection with
using the default RunLoop::current() as the dispatcher even though the
RemoteGraphicsContextGL work queue thread isn't a RunLoop thread.
Connection::dispatchToClient didn't work as expected in the thread
because the RunLoop never executed dispatched jobs. As the result,
IPC::Connection objects in jobs were leaked.

Use RunLoop::main() as the dispatcher instead of the default
RunLoop::current().

* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::invalidate): Removed an assertion ensuring the
thread is dispatcher's thread.
* Source/WebKit/Platform/IPC/StreamServerConnection.cpp:
(IPC::StreamServerConnection::open):